font flickering fix on safari

--- a/client/landing/stylus/app.activity.styl
+++ b/client/landing/stylus/app.activity.styl
@@ -361,9 +361,9 @@ h1.kdheaderview.notification-header
         opacity         1
 
     div.activity-settings-menu
-      vendor            transition, opacity .1s ease-out
+      // vendor            transition, opacity .1s ease-out
       size              21px, 18px
-      opacity           .2
+      opacity           0
       abs()
       top               0
       right             20px
